Añadimos la cabecera al archivo inicial

--- a/prueba2.html
+++ b/prueba2.html
@@ -10,6 +10,9 @@
 
 <body>
     <div id="container">
+        <div id=cabecera>
+            Cabecera
+        </div>
         <div id="post">
             <h2>este es el titulo</h2>
             <p>y este es el parrafo de contenido</p>
