--- a/prueba2.html
+++ b/prueba2.html
@@ -13,6 +13,7 @@
         <div id="post">
             <h2>este es el titulo</h2>
             <p>y este es el parrafo de contenido</p>
+            <p>Este es un nuevo parrafo donde apareceran los gustos y proyectos</p>
         </div>
     </div>
 </body>
