cambie la cabecera y el color del css del body

--- a/prueba2.html
+++ b/prueba2.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id=cabecera>
-           Esta es mi  Cabecera
+           Esta es mi  Cabecera cabecera
         </div>
         <div id="post">
             <h2>este es el titulo</h2>
