cambie la cabecera, agregue un parrafo, cammbie el color del t del texto por verde

--- a/prueba2.html
+++ b/prueba2.html
@@ -11,12 +11,13 @@
 <body>
     <div id="container">
         <div id=cabecera>
-           Esta es mi  Cabecera
+           Esta es mi  Cabecera maestra
         </div>
         <div id="post">
             <h2>este es el titulo</h2>
             <p>y este es el parrafo de contenido</p>
             <p>Este es un nuevo parrafo donde apareceran los gustos y proyectos</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
