--- a/prueba2.html
+++ b/prueba2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a mi sitio web</title>
+    <title>Bienvenido a mi sitio web 2.0</title>
     <link rel="stylesheet" href="/css/estilo.css">
 </head>
 
